updating paper and references

--- a/paper.bib
+++ b/paper.bib
@@ -24,3 +24,19 @@
   doi = "doi:10.1001/jama.283.13.1710",
   url = "https://jamanetwork.com/journals/jama/fullarticle/vol/283/pg/1710"
 }
+
+@article{diez_2019, 
+  title="The Post Released the DEA’s Data on Pain Pills. Here’s What Local Journalists are Using It For.", 
+  url="https://www.washingtonpost.com/national/2019/08/12/post-released-deas-data-pain-pills-heres-what-local-journalists-are-using-it/&usg=AOvVaw3TrlkTVOxr_jFBdiKIU61G",
+  journal="The Washington Post", 
+  author="Diez, Maria", 
+  year="2019", 
+  month="Aug"} 
+  
+@article{top_2020, 
+  title="Suburbs saw large influx of prescription opioids", 
+  url="https://baltimorefishbowl.com/stories/analysis-marylands-suburbs-saw-a-large-influx-of-prescription-opioids-from-2006-2012/",
+  journal="Bowie Blade-News", 
+  author="Top, Emily, 
+  year="2020", 
+  month="Jan"} 
